--- a/shop/cart/static/cart/css/cart.css
+++ b/shop/cart/static/cart/css/cart.css
@@ -1,49 +1,3 @@
-.cart-link {
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    gap: 6px;
-    color: var(--primary-color);
-    text-decoration: none;
-}
-
-.cart-link:hover {
-    color: var(--primary-color-dark);
-}
-
-.icon-cart {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.cart-count {
-    background-color: var(--primary-color);
-    color: #fff;
-    border-radius: 999px;
-    padding: 2px 6px;
-    font-size: 12px;
-    line-height: 1;
-    position: absolute;
-    top: -6px;
-    right: -10px;
-    opacity: 1;
-    transition: opacity 0.3s ease, transform 0.3s ease;
-}
-
-.cart-count.hidden {
-    opacity: 0;
-    transform: scale(0.8);
-}
-
-/* .btn {
-    padding: 6px 12px;
-    background-color: var(--primary-color);
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-} */
-
 button.btn-small {
     padding: 5px;
     font-size: 14px;
@@ -107,6 +61,10 @@ button.btn-small {
     text-align: right;
     font-size: 18px;
     font-weight: bold;
+}
+form button.btn {
+    align-self: flex-end;
+
 }
 
 form button.btn-danger {
